[tool.poetry]
name = "radar3-api"
version = "0.1.0"
description = ""
authors = ["andyatterton <andrew.atterton@ukkidney.org>"]
readme = "README.md"
packages = [{include = "radar3_api"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
